--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
+.spin {
+  position:absolute;
+  top:50%;
+  left:50%;
+  z-index: 10000;
+}
